--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,76 +1,117 @@
-name: Build and Release
+name: build and release
 
 on:
   push:
     tags:
-      - 'v*.*.*' # Triggers on version tags
-      - 'v*.*.*-*' # Trigger for pre-release tags
+      - v[0-9]+.[0-9]+.[0-9]+*
   workflow_dispatch: # Allows manual triggering
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  macos:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-
+        os-version: ['12', '14']
+        include:
+          - os-version: '12'
+            arch: x86_64
+          - os-version: '14'
+            arch: aarch64
+    runs-on: macos-${{ matrix.os-version }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Check out Git repository
+        uses: actions/checkout@v4
         with:
-          node-version: '20'
+          sparse-checkout: |
+            .github
+            DeskThingServer
+
+      - name: Install Node.js, NPM
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
       - name: Install dependencies
         run: |
-          cd ./DeskThingServer
+          cd DeskThingServer
           npm ci
 
-      - name: Run type check
-        run: |
-          cd ./DeskThingServer
-          npm run typecheck
-
-      - name: Build application
-        run: |
-          cd ./DeskThingServer
-          npm run build:${{ runner.os }}
-
-      - name: Extract version from tag
-        id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
+      - name: Build/release Electron app
+        uses: paneron/action-electron-builder@v1.8.1
         with:
-          name: DeskThing-${{ steps.get_version.outputs.VERSION }}-${{ runner.os }}
-          path: ./DeskThingServer/dist/*.*
+          github_token: ${{ secrets.github_token }}
+          package_manager: npm
+          package_root: ${{ github.workspace }}/DeskThingServer
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+
+      - name: Upload binaries to artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: deskthing-macos-${{ matrix.arch }}
+          path: ${{ github.workspace }}/DeskThingServer/dist/deskthing-*.dmg
 
   release:
-    needs: build
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+
+    name: Build ${{ matrix.os }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
+      - name: Check out Git repository
+        uses: actions/checkout@v4
         with:
-          path: ./dist
+          sparse-checkout: |
+            .github
+            DeskThingServer
 
-      - name: Get the version
-        id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-
-      - name: Update or create release
-        uses: softprops/action-gh-release@v1
+      - name: Install Node.js, NPM
+        uses: actions/setup-node@v4
         with:
-          tag_name: ${{ steps.get_version.outputs.VERSION }}
-          files: ./dist/**/*
-          draft: true
-          prerelease: false
-          generate_release_notes: true
+          node-version: 20
+
+      - name: Install dependencies
+        run: |
+          cd DeskThingServer
+          npm ci
+
+      - name: Build/release Electron app
+        uses: paneron/action-electron-builder@v1.8.1
+        with:
+          github_token: ${{ secrets.github_token }}
+          package_manager: npm
+          package_root: ${{ github.workspace }}/DeskThingServer
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+
+      - name: Upload binaries to artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: deskthing-${{matrix.os}}
+          path: ${{ github.workspace }}/DeskThingServer/dist/deskthing*
+
+  publish:
+    needs: [release, macos]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Get Current Release
+        id: get_current_release
+        uses: joutvhu/get-release@v1
+        with:
+          latest: true
+          pattern: '^v.*'
+          prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+      - uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.get_current_release.outputs.tag_name }}
+          files: |
+            deskthing-macos-aarch64/*
+            deskthing-macos-x86_64/*
+            deskthing-ubuntu-latest/*
+            deskthing-windows-latest/*
