--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,15 @@ jobs:
           package_root: ${{ github.workspace }}/DeskThingServer
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
 
-      - name: Upload binaries to artifacts
+      - name: Upload windows binaries to artifacts
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: deskthing-${{matrix.os}}
+          path: ${{ github.workspace }}/DeskThingServer/dist/deskthing*.exe
+
+      - name: Upload linux binaries to artifacts
+        if: matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v4
         with:
           name: deskthing-${{matrix.os}}
