--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -53,6 +53,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.4",
+    "typedoc": "^0.26.10",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
   }
