--- a/DeskThingServer/tsconfig.json
+++ b/DeskThingServer/tsconfig.json
@@ -1,4 +1,20 @@
 {
   "files": [],
-  "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }],
+  "typedocOptions": {
+    "entryPoints": [
+      "src/main/**/*.ts",
+      "src/preload/**/*.ts",
+      "src/renderer/src/**/*.tsx",
+      "src/renderer/src/**/*.ts"
+    ],
+    "entryPointStrategy": "expand",
+    "out": "docs",
+    "excludePrivate": true,
+    "excludeProtected": true,
+    "excludeExternals": true,
+    "includeVersion": true,
+    "categorizeByGroup": true,
+    "categoryOrder": ["Main", "Preload", "Renderer", "*"]
+  }
 }
