--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -17,6 +17,10 @@
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/itsriprod/DeskThing.git"
+  },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
