--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -36,6 +36,7 @@
     "react-rewards": "^2.0.4",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.3",
+    "react-tag-input": "^6.10.3",
     "uuid": "^10.0.0",
     "ws": "^8.17.1",
     "zustand": "^5.0.0-rc.2"
