Backend Mapping Refresh

--- a/DeskThingServer/tsconfig.node.json
+++ b/DeskThingServer/tsconfig.node.json
@@ -1,7 +1,11 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
-  "include": ["electron.vite.config.*", "src/main/**/*", "src/preload/**/*",
-  "src/shared/**/*.ts"],
+  "include": [
+    "electron.vite.config.*",
+    "src/main/**/*",
+    "src/preload/**/*",
+    "src/shared/**/*.ts"
+  ],
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
@@ -15,7 +19,8 @@
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "@shared/*": ["src/shared/*"]
+      "@server/*": ["src/main/*"],
+      "@shared/*": ["src/shared/*"],
     },
     "noUnusedLocals": true,
     "noUnusedParameters": true,
