Updated setting initialization

--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -12,7 +12,7 @@
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
-    "dev": "electron-vite dev",
+    "dev": "electron-vite dev --debug",
     "debug": "electron-vite dev --inspect=8893",
     "build": "npm run typecheck && electron-vite build && electron-builder",
     "postinstall": "electron-builder install-app-deps",
@@ -26,6 +26,7 @@
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
     "@types/auto-launch": "^5.0.5",
+    "@types/ws": "^8.5.13",
     "adm-zip": "^0.5.16",
     "auto-launch": "^5.0.6",
     "cors": "^2.8.5",
