Tons of small bugfixes

--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -51,6 +51,8 @@
     "@electron-toolkit/eslint-config-ts": "^1.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^2.5.0",
+    "@eslint/js": "^9.17.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^18.19.9",
     "@types/react": "^18.2.48",
@@ -60,7 +62,7 @@
     "electron-builder": "^24.9.1",
     "electron-rebuild": "^3.2.9",
     "electron-vite": "^2.0.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.33.2",
     "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
@@ -69,7 +71,8 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.4",
     "typedoc": "^0.26.10",
-    "typescript": "^5.3.3",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.1",
     "vite": "^5.0.12",
     "vitest": "^2.1.8"
   },
