--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -24,14 +24,16 @@
     "url": "https://github.com/itsriprod/DeskThing.git"
   },
   "dependencies": {
-    "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
+    "@floating-ui/react-dom": "^2.1.2",
     "@types/auto-launch": "^5.0.5",
     "@types/ws": "^8.5.13",
     "adm-zip": "^0.5.16",
     "auto-launch": "^5.0.6",
     "cors": "^2.8.5",
     "cross-unzip": "^0.2.1",
+    "dompurify": "^3.2.3",
+    "electron-log": "^5.2.4",
     "electron-updater": "^6.1.7",
     "express": "^4.21.0",
     "lottie-react": "^2.4.0",
@@ -40,6 +42,7 @@
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.3",
     "react-tag-input": "^6.10.3",
+    "semver": "^7.6.3",
     "sharp": "^0.33.5",
     "update-electron-app": "^3.1.0",
     "uuid": "^10.0.0",
@@ -49,9 +52,11 @@
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@electron-toolkit/eslint-config-ts": "^1.0.1",
+    "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^2.5.0",
     "@eslint/js": "^9.17.0",
+    "@types/adm-zip": "^0.5.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^18.19.9",
@@ -70,7 +75,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.4",
-    "typedoc": "^0.26.10",
+    "typedoc": "^0.27.6",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.1",
     "vite": "^5.0.12",
