--- a/DeskThingServer/tsconfig.node.json
+++ b/DeskThingServer/tsconfig.node.json
@@ -11,7 +11,7 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "strict": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
