--- a/DeskThingServer/.vscode/settings.json
+++ b/DeskThingServer/.vscode/settings.json
@@ -7,5 +7,9 @@
   },
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "cSpell.words": [
+    "norndis",
+    "Reflash"
+  ]
 }
