--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
           node-version: 20
       - name: Install the Apple certificate and provisioning profile
         env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
           BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
@@ -63,6 +64,7 @@ jobs:
       - name: Build/release Electron app
         uses: paneron/action-electron-builder@v1.8.1
         env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
           FL_NOTARIZE_ASC_PROVIDER: ${{ secrets.APPLE_TEAM_ID }}
           DEBUG: electron-builder,electron-notarize*
           CSC_LINK: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
@@ -114,12 +116,13 @@ jobs:
 
       - name: Build/release Electron app
         uses: paneron/action-electron-builder@v1.8.1
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
         with:
           github_token: ${{ secrets.github_token }}
           package_manager: npm
           package_root: ${{ github.workspace }}/DeskThingServer
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-
       # - name: Upload windows binaries to artifacts
       #   if: matrix.os == 'windows-latest'
       #   uses: actions/upload-artifact@v4
