--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -4,10 +4,11 @@
   "description": "A DeskThing server UI to interface with the DeskThing car thing app",
   "main": "./out/main/index.js",
   "author": "Riprod",
+  "type": "module",
   "homepage": "https://github.com/ItsRiprod/DeskThing",
   "scripts": {
     "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "lint": "eslint ./src",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
@@ -27,7 +28,6 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@floating-ui/react-dom": "^2.1.2",
     "@types/auto-launch": "^5.0.5",
-    "@types/ws": "^8.5.13",
     "adm-zip": "^0.5.16",
     "auto-launch": "^5.0.6",
     "cors": "^2.8.5",
@@ -51,25 +51,30 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@electron-toolkit/eslint-config-prettier": "^2.0.0",
-    "@electron-toolkit/eslint-config-ts": "^1.0.1",
+    "@electron-toolkit/eslint-config-prettier": "^3.0.0",
+    "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^2.5.0",
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.21.0",
     "@types/adm-zip": "^0.5.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^18.19.9",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "electron-builder": "^24.9.1",
     "electron-rebuild": "^3.2.9",
-    "electron-vite": "^2.0.0",
-    "eslint": "^8.57.1",
-    "eslint-plugin-react": "^7.33.2",
+    "electron-vite": "^3.0.0",
+    "esbuild": "^0.25.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
     "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.2.4",
@@ -78,9 +83,9 @@
     "tailwindcss": "^3.4.4",
     "typedoc": "^0.27.6",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.1",
-    "vite": "^5.0.12",
-    "vitest": "^2.1.8"
+    "typescript-eslint": "^8.25.0",
+    "vite": "^6.2.0",
+    "vitest": "^3.0.7"
   },
   "build": {
     "appId": "com.deskthing.app",
