--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write .",
     "lint": "eslint ./src",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
-    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
+    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false --listFiles",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
