--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write .",
     "lint": "eslint ./src",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
-    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false --listFiles",
+    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
@@ -51,6 +51,7 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@deskthing/types": "file:../../deskthing-types",
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/preload": "^3.0.1",
