Split index.ts into several components + fixed test cases

--- a/DeskThingServer/.npmrc
+++ b/DeskThingServer/.npmrc
@@ -1,2 +1,2 @@
-electron_mirror=https://npmmirror.com/mirrors/electron/
-electron_builder_binaries_mirror=https://npmmirror.com/mirrors/electron-builder-binaries/
+electron-mirror=https://npmmirror.com/mirrors/electron/
+electron-builder-binaries-mirror=https://npmmirror.com/mirrors/electron-builder-binaries/
