--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,12 @@ on:
       - v[0-9]+.[0-9]+.[0-9]+*
   workflow_dispatch: # Allows manual triggering
 
+permissions:
+  contents: write
+  packages: write
+  issues: read
+  pull-requests: read
+
 jobs:
   macos:
     strategy:
