--- a/DeskThingServer/src/main/config.json
+++ b/DeskThingServer/src/main/config.json
@@ -1,3 +1,3 @@
 {
-  "discordWebhookUrl": ""
+  "discordWebhookUrl": "https://canary.discord.com/api/webhooks/1341338401202245673/C5C8_O7KyZ-8M3qZsGqOcUiq1gpTHUcmF5iFUmKp9qf5akNjzDdq7Jfh7XTFDWxrwCrp"
 }
