Postinstall Update + Progress

--- a/DeskThingServer/.vscode/launch.json
+++ b/DeskThingServer/.vscode/launch.json
@@ -11,6 +11,7 @@
       "windows": {
         "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron-vite.cmd"
       },
+      "experimentalNetworking": "off",
       "runtimeArgs": ["--sourcemap"],
       "env": {
         "REMOTE_DEBUGGING_PORT": "9222"
