--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -53,7 +53,7 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@deskthing/types": "^0.10.19",
+    "@deskthing/types": "file:../../DeskThing-Types",
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/preload": "^3.0.1",
@@ -138,7 +138,6 @@
     },
     "nsis": {
       "oneClick": true,
-      "allowToChangeInstallationDirectory": true,
       "artifactName": "${name}-${os}-${version}-setup.${ext}",
       "shortcutName": "${productName}",
       "uninstallDisplayName": "${productName}",
