--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22.15.0'
+      
       - name: Install the Apple certificate and provisioning profile
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
@@ -57,11 +58,13 @@ jobs:
           # Import certificate to keychain
           security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security list-keychain -d user -s $KEYCHAIN_PATH
-      - name: Install Sharp dependencies
-        run: |
-          if [ "${{ runner.os }}" == "macOS" ]; then
-            brew install vips
-          fi
+      
+      # - name: Install Sharp dependencies
+      #   run: |
+      #     if [ "${{ runner.os }}" == "macOS" ]; then
+      #       brew install vips
+      #     fi
+      
       - name: Install dependencies
         run: |
           cd DeskThingServer
@@ -121,13 +124,15 @@ jobs:
           node-version: '22.15.0'
 
           # Installs the sharp deps
-      - name: Install Sharp dependencies  
-        run: |
-          if [ "${{ runner.os }}" == "Linux" ]; then
-            sudo apt-get update
-            sudo apt-get install -y libvips-dev
-          fi
-
+      # - name: Install Sharp dependencies  
+      #   run: |
+      #     if [ "${{ runner.os }}" == "Linux" ]; then
+      #       sudo apt-get update
+      #       sudo apt-get install -y libvips-dev
+      #     elif [ "${{ runner.os }}" == "Windows" ]; then
+      #       echo "No additional dependencies needed for Windows"
+      #     fi
+        
       - name: Install dependencies
         run: |
           cd DeskThingServer
