--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -45,13 +45,13 @@
     "react-select": "^5.8.3",
     "react-tag-input": "^6.10.3",
     "semver": "^7.6.3",
-    "sharp": "^0.33.5",
+    "sharp": "^0.34.2",
     "uuid": "^10.0.0",
     "ws": "^8.17.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@deskthing/types": "latest",
+    "@deskthing/types": "^0.11.0",
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/preload": "^3.0.1",
