Added data analytics

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ CommunityApps
 /DeskThingServer/docs
 DeskThingServer/.env.production
 DeskThingServer/src/main/config.json
+/DeskThingServer/scripts
