--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@electron-toolkit/utils": "^3.0.0",
     "@electron/rebuild": "^4.0.1",
+    "@noble/curves": "^1.9.2",
     "@types/auto-launch": "^5.0.5",
     "adm-zip": "^0.5.16",
     "auto-launch": "^5.0.6",
