--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -48,7 +48,7 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@deskthing/types": "file:../../DeskThing-Types",
+    "@deskthing/types": "file:../../deskthing-types",
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/preload": "^3.0.1",
