--- a/DeskThingServer/package.json
+++ b/DeskThingServer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deskthing",
-  "version": "0.11.17",
+  "version": "0.11.18",
   "description": "A DeskThing server UI to interface with the DeskThing car thing app",
   "main": "./out/main/index.js",
   "author": "Riprod",
@@ -170,7 +170,8 @@
     "linux": {
       "target": [
         "AppImage",
-        "deb"
+        "deb",
+        "pacman"
       ],
       "maintainer": "Riprod",
       "category": "Utility",
