--- a/DeskThingServer/tsconfig.node.json
+++ b/DeskThingServer/tsconfig.node.json
@@ -13,17 +13,16 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "strict": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "noEmit": true,
-    "baseUrl": ".",
     "paths": {
-      "@processes/*": ["src/main/processes/*"],
-      "@server/*": ["src/main/*"],
-      "@shared/*": ["src/shared/*"],
+      "@processes/*": ["./src/main/processes/*"],
+      "@server/*": ["./src/main/*"],
+      "@shared/*": ["./src/shared/*"],
     },
     "noUnusedLocals": true,
     "noUnusedParameters": true,
